@@ -13,12 +13,10 @@ class SearchController extends Etd_Controller_Action {
     $this->view->title = "Search"; 
   }
 
-  /**
-   * @todo combine the url_opts with url_params.
-   */  
   public function resultsAction() {
     $request = $this->getRequest();
     $query = $request->getParam("query"); // basic keyword/anywhere query
+    // TODO:  combine the url_opts with url_params.
     $url_opts = array("query" => $query);
 
     // override default sort of author - relevance makes more sense for a search
